  . safe unlinking
  . cookies
  . canary protection (debug build only)
  . random generation of cookies and canaries
- Fixed incorrect function names on FreeBSD where inet_pton() was named
  __inet_pton() and inet_ntop() was named __inet_ntop(). (Hannes)
- Fixed the validate email filter so that the letter "v" can also be used in
  the user part of the email address. (Derick)
- Fixed bug #39935 (Extensions tidy,mcrypt,mhash,pdo_sqlite ignores
  --with-libdir). (judas dot iscariote at gmail dot com, Derick)
- Fixed bug #39903 (Notice message when executing __halt_compiler() more than 
  once). (Tony)
- Fixed bug #39898 (FILTER_VALIDATE_URL validates \r\n\t etc). (Ilia)
- Fixed bug #39884 (ReflectionParameter::getClass() throws exception for type
  hint self). (thekid at php dot net)
- Fixed bug #39873 (number_format() breaks with locale & decimal points).
  (Ilia)
- Fixed bug #39869 (safe_read does not initialize errno).
  (michiel at boland dot org, Dmitry)
- Fixed bug #39850 (SplFileObject throws contradictory/wrong error messages 
  when trying to open "php://wrong"). (Tony)
- Fixed bug #39832 (SOAP Server: parameter not matching the WSDL specified type
  are set to 0). (Dmitry)
- Fixed bug #39815 (SOAP double encoding is not locale-independent). (Dmitry)
- Fixed bug #39685 (iconv() - undefined function). (Hannes)
- Fixed bug #39596 (Creating Variant of type VT_ARRAY). (Rob)
- Fixed bug #38852 (XML-RPC Breaks iconv). (Hannes)
- Fixed bug #37588 (COM Property propputref converts to PHP function 
  and can't be accesed). (Rob)
- Fixed bug #36392 (wrong number of decimal digits with %e specifier in
  sprintf). (Matt,Ilia)
- Fixed bug #33734 (Something strange with COM Object). (Rob)
- Fixed bug #33386 (ScriptControl only sees last function of class). (Rob)

14 Dec 2006, PHP 5.2.1RC1
- Added a meta tag to phpinfo() output to prevent search engines from indexing 
  the page. (Ilia)
- Added new function, sys_get_temp_dir(). (Hartmut)